✨ feat: Add Google site verification meta tag

--- a/.github/pages/_includes/head-custom.html
+++ b/.github/pages/_includes/head-custom.html
@@ -1,2 +1,3 @@
 <!-- favicon.ico -->
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<meta name="google-site-verification" content="QejJLm7KXNwnrOwk5zhq7HBYmV1wIImPILlGw4M9giQ" />
