--- a/.github/pages/_includes/head-custom.html
+++ b/.github/pages/_includes/head-custom.html
@@ -1,3 +1,5 @@
 <!-- favicon.ico -->
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <meta name="google-site-verification" content="_hkJzzyo0uvpdrb06WTI-1i1baA1jC-ZntJRTRdl_7I" />
+<meta property="og:image" content="https://github.com/irichu/dotfiles/releases/download/v0.4.0/ss001-v0.4.0.png">
+<meta property="og:image:alt" content="A preview image of irichu's dotfiles.">
